# OpenSpatial

./: README.md
config/preprocessing/: demo_preprocessing_scannetpp.yaml
data_preprocessing/embodiedscan/: README.md  pyproject.toml
data_preprocessing/embodiedscan/embodiedscan_data/: explorer.py  extract.py
data_preprocessing/scannetpp/: prepare_scannetpp.py
utils/: box_utils.py
